# agis-os

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_OLD.md  SECURITY.md  SYSTEM_ANALYSIS.md  TASKS.md  V3_IMPLEMENTATION_SUMMARY.md  V3_SETUP_GUIDE.md  alembic.ini  app.py  docker-compose.yml  docsync.yaml  entregas_por_entregador.py  init_db.py  install_logistica_web_app.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_worker.py  setup.py  start_LogisticSmart.bat  vercel.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml  config.toml.txt
Relatórios/: entregas_agrupadas_20-03.xlsx  entregas_agrupadas_21-03.xlsx  entregas_agrupadas_22-03.xlsx
alembic/: env.py
alembic/versions/: f668079dd3de_initial_migration_with_v3_0_models.py
archive/data-samples/: Relatorio_entregas.xlsx
archive/data-samples/Relatórios/: entregas_agrupadas_21-03_Repaired.xlsx
archive/legacy-v2/: CONTRIBUTING_OLD.md  app_entregas_gui.py  install_logistica_app.py  logistic_smart_app.py
docs/: AGIS_CODEMAP.md  AGIS_INTEGRATION_GUIDE.md  AGIS_OCC_ARCHITECTURE.md  CORPORATE_GOVERNANCE_FRAMEWORK.md  GUARDDRIVE_INFRASTRUCTURE_REUSE.md  GUARDDRIVE_INTEGRATION_ANALYSIS.md  QUICKSTART.md
docs/comercial/: CONTRATO_BASE.md  PROPOSTA_COMERCIAL.md  index.html  roi_calculator.html
docs/pt-br/: AGIS_OPS_SKILL.md  CHECKLIST_EAP_TASKMASH_OPERACIONAL.md  README.md
docs/ui-design/: UI_UX_DESIGN_GUIDE.md
scripts/: migrate_sqlite_to_postgres.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  jwt_auth.py
src/api/routes/: auth.py  deliveries.py  drivers.py  orders.py  routes.py
src/audit/: __init__.py  logger.py
src/auth/: authentication.py  users.json
src/components/: ui_components.py
src/config/: celery_config.py  settings.py
src/database/: __init__.py  models.py  session.py
src/ingestion/: __init__.py  normalizer.py
src/ingestion/connectors/: __init__.py  base.py  manual.py
src/operational_state/: __init__.py  engine.py  events.py
src/reconciliation/: __init__.py  calculator.py
src/routing/: __init__.py  assignment.py  optimizer.py
src/tracking/: __init__.py  notifier.py
src/utils/: backup.py  data_processor.py  export_utils.py  logger.py
tests/: __init__.py  test_authentication.py  test_data_processor.py
workers/: __init__.py  celery_app.py
workers/tasks/: __init__.py  ingestion.py  notifications.py  routing.py
